// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pretty html 1`] = `
Object {
  "Constructor": "Dummy",
  "Options": Object {
    "ID": "widget",
    "containerSelector": "body",
    "label": "Link label",
    "types": Array [],
    "url": "127.0.0.1",
  },
  "html": "
<ul>
  <li>
    <a href=\\"127.0.0.1\\">Link label</a>
  </li>
</ul>
",
}
`;

exports[`pretty html 2`] = `
Object {
  "Constructor": "Dummy",
  "Options": Object {
    "ID": "widget",
    "containerSelector": "body",
    "label": "Link label",
    "types": Array [],
    "url": "127.0.0.1",
  },
  "html": "
<ul>
  <li>
    <a href=\\"127.0.0.1\\">Link label</a>
  </li>
</ul>
",
}
`;

exports[`snapshot correctly 1`] = `
Object {
  "Constructor": "Link",
  "Options": Object {
    "ID": "widget",
    "containerSelector": "body",
    "label": "Link label",
    "types": Array [],
    "url": "127.0.0.1",
  },
  "html": "<a href=\\"127.0.0.1\\">Link label</a>",
}
`;

exports[`snapshot correctly 2`] = `
Object {
  "Constructor": "Link",
  "Options": Object {
    "ID": "widget",
    "containerSelector": "body",
    "label": "Link label",
    "types": Array [],
    "url": "127.0.0.1",
  },
  "html": "<a href=\\"127.0.0.1\\">Link label</a>",
}
`;

exports[`snapshot correctly 3`] = `
Object {
  "Constructor": "Link",
  "Options": Object {
    "ID": "widget",
    "containerSelector": "body",
    "label": "Updated link label",
    "types": Array [],
    "url": "127.0.0.1",
  },
  "html": "<a href=\\"127.0.0.1\\">Updated link label</a>",
}
`;
